--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-313.2KB/s(Youtube:不良林), server: 185.172.113.108, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇯🇵 日本-691.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-474.5KB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 45379, type: trojan, password: d73e7fe4-88d2-4d9a-81c8-c9a97bbc1b84, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.37MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇸🇬 新加坡-2.12MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 2aef06f4-6fa1-3fe4-9c08-8bdbd2cefe4e, sni: sg1.jjzgy.live, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇩🇪 德国-2.21MB/s(Youtube:不良林), server: tt1.tjvpn.top, port: 2022, type: trojan, password: 0cb2cd1f-870b-485c-914a-60aba39eed39, sni: tt1.tjvpn.top, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-422.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-1.56MB/s(Youtube:不良林), server: 185.172.113.108, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇬🇧 英国-1.08MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-1.85MB/s(Youtube:不良林), server: 185.172.113.108, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-371.0KB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-307.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
