--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-2.21MB/s(Youtube:不良林), server: tt1.tjvpn.top, port: 2022, type: trojan, password: 0cb2cd1f-870b-485c-914a-60aba39eed39, sni: tt1.tjvpn.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-422.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-1.56MB/s(Youtube:不良林), server: 185.172.113.108, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-1.08MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-1.85MB/s(Youtube:不良林), server: 185.172.113.108, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-4.55MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 45379, type: trojan, password: d73e7fe4-88d2-4d9a-81c8-c9a97bbc1b84, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-371.0KB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-307.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-4.11MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.49MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-371.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-307.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
