--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.21MB/s(Youtube:不良林), server: tt1.tjvpn.top, port: 2022, type: trojan, password: 0cb2cd1f-870b-485c-914a-60aba39eed39, sni: tt1.tjvpn.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.06MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.49MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.11MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.69MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇫🇷 法国-563.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.03MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-573.7KB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-843.5KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.21MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-573.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-843.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
