--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.38MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-415.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.64MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇨🇳 中国-502.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇸🇬 新加坡-393.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-341.4KB/s(Youtube:不良林), server: 5.183.176.92, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-550.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-684.0KB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-10.51MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 45379, type: trojan, password: d73e7fe4-88d2-4d9a-81c8-c9a97bbc1b84, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇫🇷 法国-506.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.76MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇬🇧 英国-663.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-232.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-268.0KB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-594.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-415.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-550.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-663.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-594.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-415.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-550.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-663.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-594.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-415.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-550.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-663.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-594.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-415.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-550.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-663.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-594.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-415.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-550.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-663.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-594.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-415.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-550.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-663.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-594.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-415.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-393.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-550.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-663.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-268.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-594.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
